# fooracle

./: README.md  World Cup 2018 v2.ipynb  World Cup 2018.ipynb  World Cup 2022 v2.ipynb  fooracle.py  pyproject.toml  ruff.toml  state_dict.pth  teams.fth
src/fooracle/: __init__.py  data.py  logger.py  main.py
src/fooracle/models/: base.py  dist.py  mlp.py
