[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fooracle"
dynamic = ["version"]
description = 'Football oracle based on historic match results.'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [{ name = "Phil Lies", email = "phil@lies.io" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["torch", "scipy", "pandas", "pandas-stubs", "typer", "pandera"]

[project.urls]
Documentation = "https://github.com/Phil Lies/fooracle#readme"
Issues = "https://github.com/Phil Lies/fooracle/issues"
Source = "https://github.com/Phil Lies/fooracle"

[project.scripts]
fooracle = "fooracle.main:main"

[tool.hatch.version]
path = "src/fooracle/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0", "ruff"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/fooracle tests}"

[tool.coverage.run]
source_pkgs = ["fooracle", "tests"]
branch = true
parallel = true
omit = ["src/fooracle/__about__.py"]

[tool.coverage.paths]
fooracle = ["src/fooracle", "*/fooracle/src/fooracle"]
tests = ["tests", "*/fooracle/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
